
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct sctp_sndrcvinfo {int sinfo_stream; } ;
typedef int consin ;


 int AF_INET ;
 int IPPROTO_SCTP ;
 int SIGALRM ;
 int SOCK_STREAM ;
 int connect (int ,struct sockaddr*,int) ;
 int csock ;
 int htonl (int) ;
 int htons (int) ;
 int lsock ;
 int recvdata ;
 int sctp_send (int ,char*,int,struct sctp_sndrcvinfo*,int ) ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;

void make_connection() {
 struct sockaddr_in consin;
 struct sctp_sndrcvinfo sinfo;

 csock = socket(AF_INET, SOCK_STREAM, IPPROTO_SCTP);
 consin.sin_family = AF_INET;
 consin.sin_addr.s_addr = htonl(0x7f000001);
 consin.sin_port = htons(1337);

 connect(csock, (struct sockaddr *)&consin, sizeof(consin));
 signal(SIGALRM, recvdata);
 sinfo.sinfo_stream = 1337;
 sctp_send(lsock, "pwned", sizeof("pwned"), &sinfo, 0);
}
